// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Switch Snapshots Render default switch 1`] = `
<div
  class="brz-ed-control__switch brz-ed-control__switch--on"
>
  <span
    class="brz-span brz-ed-control__switch-arrows"
  >
    <svg
      class="brz-icon-svg brz-ed-icon-svg align-[initial] brz-ed-control__switch--check"
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
      >
        <polygon
          fill="currentColor"
          fill-rule="nonzero"
          points="6.50836363 12.992 1.87199996 7.99199999 3.78109089 5.93317645 6.50836363 8.87435295 11.9629091 2.99199996 13.872 5.0508235"
        />
      </g>
    </svg>
    <svg
      class="brz-icon-svg brz-ed-icon-svg align-[initial] brz-icon-svg brz-ed-control__switch--un-check"
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-width="1"
      >
        <polygon
          fill="currentColor"
          fill-rule="nonzero"
          points="13.3406833 5.55111512e-17 8.76771899 5.11940885 3.58869913 0 0.769230769 2.87439085 6.20794072 8 0.769230769 13.3158649 3.58869913 16 8.76771899 10.8189279 13.9351485 16 16.7692308 13.3158649 11.6597528 8.13088577 16.479809 2.87439085"
        />
      </g>
    </svg>
    <span
      class="brz-span brz-ed-control__switch--handle"
    />
  </span>
</div>
`;

exports[`Test Switch Snapshots Render light switch 1`] = `
<div
  class="brz-ed-control__switch--light brz-ed-control__switch brz-ed-control__switch--on"
>
  <span
    class="brz-span brz-ed-control__switch-arrows"
  >
    <svg
      class="brz-icon-svg brz-ed-icon-svg align-[initial] brz-ed-control__switch--check"
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
      >
        <polygon
          fill="currentColor"
          fill-rule="nonzero"
          points="6.50836363 12.992 1.87199996 7.99199999 3.78109089 5.93317645 6.50836363 8.87435295 11.9629091 2.99199996 13.872 5.0508235"
        />
      </g>
    </svg>
    <svg
      class="brz-icon-svg brz-ed-icon-svg align-[initial] brz-icon-svg brz-ed-control__switch--un-check"
      fill="currentColor"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-width="1"
      >
        <polygon
          fill="currentColor"
          fill-rule="nonzero"
          points="13.3406833 5.55111512e-17 8.76771899 5.11940885 3.58869913 0 0.769230769 2.87439085 6.20794072 8 0.769230769 13.3158649 3.58869913 16 8.76771899 10.8189279 13.9351485 16 16.7692308 13.3158649 11.6597528 8.13088577 16.479809 2.87439085"
        />
      </g>
    </svg>
    <span
      class="brz-span brz-ed-control__switch--handle"
    />
  </span>
</div>
`;
